# anonymous-voting-circuit

./: Cargo.toml  README.md
src/: circuit.rs  elgamal.rs  lib.rs  lookup_table.rs  system.rs  utils.rs
src/benchmark/: mod.rs  pairings.rs  poseidon_exp.rs  poseidon_width.rs
src/circuit/: commitment.rs  commitment_balance.rs  mod.rs  proposal_creation.rs  registration.rs  result_announcement.rs  signature.rs
src/random_oracle/: mod.rs
src/random_oracle/blake2s/: mod.rs
src/signature/: mod.rs
src/signature/schnorr/: constraints.rs  mod.rs
src/system/: commitment.rs  commitment_balance.rs  error.rs  mod.rs
