[package]
name = "anonymous-voting-circuit"
version = "0.1.0"
edition = "2021"
description = "zkSNARK circuit constraints implementation for anonymous voting protocol"
repository = "https://github.com/y-pakorn/anonymous-voting-circuit"
authors = ["yoisha <48324733+y-pakorn@users.noreply.github.com>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-ed-on-bls12-381 = { version = "^0.3.0", default-features = false, features = ["r1cs"] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-bls12-377 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }

ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0", default-features = false }

ark-serialize = { version = "^0.3.0", default-features = false }

ark-crypto-primitives = { version = "^0.3.0", default-features = true, features = ["r1cs"] }
blake2 = { version = "^0.9", default-features = false }
digest = { version = "^0.9", default-features = false }

derivative = { version = "2.0", default-features = false, features = ["use_core"] }

arkworks-native-gadgets = { version = "^1.2.0", default-features = false }
arkworks-r1cs-gadgets = { version = "^1.2.0", default-features = false }
arkworks-utils = { version = "^1.0.1", default-features = false, features = ["poseidon_bls381_x5_5", "poseidon_bn254_x5_5", "poseidon_bn254_x5_4", "poseidon_bn254_x5_3", "poseidon_bn254_x3_3", "poseidon_bn254_x17_3"] }

thiserror = "1.0.35"
hex = "0.4.3"

[dev-dependencies]
ark-std = { version = "^0.3.0", default-features = false, features = ["print-trace"] }
#ark-groth16 = { version = "^0.3.0", default-features = false, features = ["parallel"] }
rand = "0.8.5"
